2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘fully_numeric’, not ‘fexpandsym’; zonk the latter.

	* ci.c: #include "b-divvy.h".
	(newdelnum): Change type to ‘struct cbuf’.
	(ACCB, ACCS, OK, JAM, ADD): New macros.
	(incnum): Take ‘struct cbuf *’; accumulate into ‘SHARED’.
	(addbranch): Likewise.
	(addelta): Accumulate into ‘SHARED’; pass new string to ‘cmpnum’.
	(main): Use ‘fully_numeric’.
	* rcsclean.c (main): Use ‘fully_numeric’.
	* rcsdiff.c (main): Likewise.
	* rcsmerge.c: #include "b-divvy.h".
	(main): Use ‘fully_numeric’.
	* rcsrev.c (fexpandsym): Delete func.
	(expandsym): Use ‘fully_numeric’.
	* base.h (fexpandsym): Delete func decl.

2010-04-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: fully_numeric

	* base.h (fully_numeric): New func decl.
	* rcsrev.c (split, accumulate_branchno, rev_from_symbol):
	New static funcs.
	(fully_numeric): New func.
	(fexpandsym): Use ‘fully_numeric’.
	(expandsym): Move after ‘fexpandsym’; nfc.

2010-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move conditionally-compiled test programs to yarrrr.c.

	* yarrrr.c: New file.
	* Makefile.am (EXTRA_DIST): Add yarrrr.c.
	(YALL, YPROGS): New vars.
	(y-STR2TIME, y-FCMP, y-PAIRS, y-KEEP, y-LEX, y-REV, y-SYN)
	(y-all, y-clean): New targets.
	* base.h: Comment munging; nfc.
	* maketime.c [TEST]: Delete #ifdef .. #endif block.
	* rcsfcmp.c [FCMPTEST]: Likewise.
	* rcsfnms.c [PAIRTEST]: Likewise.
	* rcskeep.c [KEEPTEST]: Likewise.
	* rcslex.c [LEXDB]: Likewise.
	* rcsrev.c [REVTEST]: Likewise.
	* rcssyn.c [SYNTEST]: Likewise.

2010-04-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: minus_p

	* base.h (minus_p): New func decl.
	* rcsutil.c (minus_p): New func.
	* rcsdiff.c (main): Use ‘minus_p’.
	* rcsmerge.c (main): Likewise.

2010-04-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] For ‘co -j’, save merge(1)-command args in ‘SINGLE’.

	* co.c (buildjoin): Save arg strings in ‘SINGLE’.
